# trading_interface

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  library.cmake
conf/: quark.template.json
src/common/: CMakeLists.txt  acb.h  atomic_future.h  basic_context.cpp  basic_context.h  basic_exchange.cpp  basic_exchange.h  basic_log.cpp  basic_log.h  basic_mq.cpp  basic_mq.h  basic_network.cpp  basic_network.h  basic_order.cpp  basic_order.h  config_desc.cpp  config_desc.h  context_scheduler.cpp  context_scheduler.h  event_target.h  exchange.h  heap_utility.h  leveldb_storage.cpp  leveldb_storage.h  loader.cpp  loader.h  memory_storage.cpp  memory_storage.h  priority_queue.h  rest_client.cpp  rest_client.h  scheduler.cpp  scheduler.h  simul_account.cpp  simul_account.h  simul_context.cpp  simul_context.h  simulator.cpp  simulator.h  storage.h  (+2 more)
src/example/: CMakeLists.txt  example_exchange.cpp  example_strategy.cpp
src/exchanges/binance/: CMakeLists.txt  account.cpp  account.h  exchange_main.cpp  exchange_main.h  identity.h  instrument.cpp  instrument.h  instrument_def_cache.cpp  instrument_def_cache.h  private_key.txt  rest_client.cpp  rest_client.h  rpc_client.cpp  rpc_client.h  secure_rpc.cpp  secure_rpc.h  secure_rpc_test.cpp  stream_map.cpp  stream_map.h  stream_test.cpp  test_exchange.cpp  user_stream_test.cpp  websocket_client.cpp  websocket_client.h  ws_streams.cpp  ws_streams.h
src/simulator/: CMakeLists.txt  sim_exchange.cpp  sim_exchange.h  simulator.cpp  simulator.h  simulator_account.cpp  simulator_account.h  simulator_instrument.cpp  simulator_instrument.h
src/tests/: CMakeLists.txt  check.h  compile_test.cpp  config_desc.cpp  loader.cpp  wandering_bst.cpp  yaml.cpp
src/tools/: CMakeLists.txt  to_single_header.cpp
src/trading_ifc/: CMakeLists.txt  abstract_account.h  abstract_instrument.h  abstract_order.h  acb.h  account.h  api.h  async.h  basic_order.h  common.h  config.h  config_desc.h  coro_support.h  error.h  exchange.h  exchange_api.h  exchange_context.h  exchange_service.h  fill.h  function.h  instrument.h  log.h  market_event.h  micromutex.h  module.h  module_decl.h  mq.h  network.h  order.h  order_params.h  orderbook.h  position.h  service.h  shared_lockable_ptr.h  shared_state.h  strategy.h  strategy_api.h  strategy_context.h  tickdata.h  ticker.h  (+6 more)
version/: CMakeLists.txt  version.h.in
